--- a/expo24/src/styles/Footer.module.css
+++ b/expo24/src/styles/Footer.module.css
@@ -7,6 +7,7 @@
 	position: absolute;
 	width: 100%;
 	padding: 10px 0px 0px 0px;
+	overflow-x: hidden;
 }
 .whiteLogo {
 	width: 280px;
